VendorCalc/force-app/main/default/objects/Calculator_Settings__c/Calculator_Settings__c.object-meta.xml
<CustomObject>
    <label>Chase Calculator Setting Record</label>
    <nameField>
        <displayFormat>QCS-{0000}</displayFormat>
        <label>calculator Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chase Calculator Setting Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>