VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Default_Balloon_10__c.field-meta.xml
<CustomField>
    <fullName>Default_Balloon_10__c</fullName>
    <label>Default Balloon (10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>