VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Default_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Base_Rate__c</fullName>
    <label>Default Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>