VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>