VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Goods_Type__c.field-meta.xml
<CustomField>
    <fullName>Goods_Type__c</fullName>
    <label>Goods Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>