VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Program_Partner__c.field-meta.xml
<CustomField>
    <fullName>Program_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Partner</label>
    <referenceTo>Program_Partner__c</referenceTo>
    <relationshipName>Calculator_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>