VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Repayment_Expected__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Expected__c</fullName>
    <label>Repayment Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>