VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/Term_months__c.field-meta.xml
<CustomField>
    <fullName>Term_months__c</fullName>
    <label>Term (months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>