VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X1000KAbove_Balloon_10__c.field-meta.xml
<CustomField>
    <fullName>X1000KAbove_Balloon_10__c</fullName>
    <label>1000KAbove Balloon(10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>