VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X1000KAbove_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>X1000KAbove_Brokerage__c</fullName>
    <label>1000KAbove Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>