VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X1000KAbove_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>X1000KAbove_Funder_Name__c</fullName>
    <label>1000KAbove Funder Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>