VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X1000LKAbove_Balloon_0__c.field-meta.xml
<CustomField>
    <fullName>X1000LKAbove_Balloon_0__c</fullName>
    <label>1000KAbove Balloon(0)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>