VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X100Kto150K_Balloon_20__c.field-meta.xml
<CustomField>
    <fullName>X100Kto150K_Balloon_20__c</fullName>
    <label>100Kto150K Balloon(20)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>