VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X100Kto150K_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>X100Kto150K_Funder_Name__c</fullName>
    <label>100Kto150K Funder Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>