VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X150Kto250_Balloon_30__c.field-meta.xml
<CustomField>
    <fullName>X150Kto250_Balloon_30__c</fullName>
    <label>150Kto250 Balloon(30)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>