VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X150Kto250_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>X150Kto250_Brokerage__c</fullName>
    <label>150Kto250 Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>