VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X150Kto250K_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>X150Kto250K_Funder_Name__c</fullName>
    <label>150Kto250K Funder Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>