VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X250Kto500K_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>X250Kto500K_Base_Rate__c</fullName>
    <label>250Kto500K Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>