VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X250Kto500K_Funder_Name__c.field-meta.xml
<CustomField>
    <fullName>X250Kto500K_Funder_Name__c</fullName>
    <label>250Kto500K Funder Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>