VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X500Kto999K_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>X500Kto999K_Brokerage__c</fullName>
    <label>500Kto999K Brokerage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>