VendorCalc/force-app/main/default/objects/Calculator_Settings__c/fields/X50Kto100K_Balloon20__c.field-meta.xml
<CustomField>
    <fullName>X50Kto100K_Balloon20__c</fullName>
    <label>50Kto100K Balloon(20)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>