VendorCalc/force-app/main/default/objects/Calculator_Settings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Facility_Type__c</columns>
    <columns>Goods_Type__c</columns>
    <columns>Asset_Type__c</columns>
    <columns>Program_Partner__c</columns>
    <columns>Term_months__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>